temporary fix to bottom of page content being cut off on mobile

--- a/src/assets/style/PageTemplate.css
+++ b/src/assets/style/PageTemplate.css
@@ -86,7 +86,7 @@ main {
   padding-top: 5%;
   padding-left: 20%; /* Padding around the content */
   padding-right: 20%; /* Padding around the content */
-  padding-bottom: 20px;
+  padding-bottom: 50px;
   box-sizing: border-box; /* Include padding in height calculation */
 }
 
@@ -293,7 +293,7 @@ hr.solid {
     padding-top: 5%;
     padding-left: 5%; /* Padding around the content */
     padding-right: 5%; /* Padding around the content */
-    padding-bottom: 20px;
+    padding-bottom: 80px;
     box-sizing: border-box; /* Include padding in height calculation */
   }
 
